--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -1,3 +1,4 @@
 <li><p><a href="/hello">Test the session</a></p></li>
 <li><a href="/autos">Autos CRUD</a></li>
+<li><a href="/cats">Cats CRUD</a>
 
