--- a/mysite/cats/templates/cats/cat_list.html
+++ b/mysite/cats/templates/cats/cat_list.html
@@ -9,7 +9,7 @@
           {{ cat.nickname }} ({{ cat.breed }})
           (<a href="{% url 'cats:cat_update' cat.id %}">Update</a> |
           <a href="{% url 'cats:cat_delete' cat.id %}">Delete</a>) <br/>
-          Weight: {{ cat.weight }}, likes ({{ cat.food }})
+          Weight: {{ cat.weight }}, favorite foods are: {{ cat.foods }}
       </li>
     {% endfor %}
   </ul>
@@ -18,7 +18,7 @@
   {% endif %}
   <p>
     {% if breed_count > 0 %}
-      <a href="{% url 'breed:breed_create' %}">Add a breed</a>
+      <a href="{% url 'cats:cat_create' %}">Add a cat</a>
     {% else %}
       Please add a breed before you add a cat.
     {% endif %}
