--- a/mysite/ads/templates/ads/ad_confirm_delete.html
+++ b/mysite/ads/templates/ads/ad_confirm_delete.html
@@ -4,7 +4,7 @@
 
 <h1>Delete Ad</h1>
 
-<p>Are you sure you want to delete the auto: {{ ad }}?</p>
+<p>Are you sure you want to delete the Ad: {{ ad }}?</p>
 
 <form action="" method="POST">
   {% csrf_token %}
